--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-body {
+@import url("https://fonts.googleapis.com/css?family=Proxima+Nova");
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: "proxima-nova";
+  text-decoration: none;
+  list-style: none;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  background: #ffdf8c;
+  padding: 53px 45px;
 }
