--- a/src/Content/Header/header.css
+++ b/src/Content/Header/header.css
@@ -23,7 +23,7 @@
   align-items: center;
   justify-content: center;
 }
-.logo--img{
+.logo--img {
   width: 40px;
   margin-right: 20px;
 }
@@ -47,6 +47,9 @@
 }
 .header__container--box {
   display: flex;
+}
+.header__container--box {
+  color: #000;
 }
 .header__container--box > img > button {
   height: 38px;
