--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -36,6 +36,11 @@
   border: none;
   background: none;
 }
+.NavigationMini--box {
+  width: 219px;
+  display: flex;
+  justify-content: space-between;
+}
 .imgVector_a--button {
   padding-left: 10px;
 }
@@ -56,12 +61,28 @@
 }
 .sort__label {
   display: flex;
-  width: 160px;
+  width: 150px;
   flex-direction: column;
 }
 .sort__label__button {
   text-align: left;
+  border: 0;
+  background: none;
   padding: 10px;
+}
+.activeOpen {
+  color: #fe5f1e;
+
+  background: rgba(254, 95, 30, 0.1);
+}
+
+.sort__label {
+  padding: 8px 0;
+  position: absolute;
+  right: 59px;
+  top: 230px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
+  border-radius: 10px;
 }
 
 /* .sort__label {
@@ -73,11 +94,9 @@
   font-weight: 600;
   padding: 10px 0;
   background: #ffffff;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
-  border-radius: 10px;
+
 }
 .sort__label > ul > li:hover {
-  background: rgba(254, 95, 30, 0.05);
   cursor: pointer;
 }
 .sort__label > ul > li > button {
